<resources>
    <string name="app_name">Test.Allahyari.App</string>
    <string name="first_quarter">First Part</string>
    <string name="second_quarter">Second Part</string>

    <string name="TH11">Part 1.1</string>
    <string name="TH12">Part 1.2</string>
    <string name="TH13">Part 1.3</string>
    <string name="TH14">Part 1.4</string>
    <string name="TH15">Part 1.5</string>

    <string name="TH21">Part 2.1</string>
    <string name="TH22">Part 2.2</string>
    <string name="TH23">Part 2.3</string>
    <string name="TH24">Part 2.4</string>
    <string name="TH25">Part 2.5</string>


</resources>
