<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/first_quarter"
        android:gravity="left"
        android:text="@string/first_quarter"
        android:layout_margin="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/first_quarter"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:background="#08065C"
            android:text="@string/TH11"
            android:gravity="center"
            android:textColor="@color/white"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image01"  />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:background="#08065C"
            android:text="@string/TH12"
            android:gravity="center"
            android:textColor="@color/white"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image02"  />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:background="#08065C"
            android:text="@string/TH13"
            android:gravity="center"
            android:textColor="@color/white"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image03"  />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/first_quarter"
        android:gravity="left"
        android:text="@string/second_quarter"
        android:layout_margin="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/first_quarter"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:background="#08065C"
            android:text="@string/TH21"
            android:gravity="center"
            android:textColor="@color/white"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image04" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:background="#08065C"
            android:text="@string/TH22"
            android:gravity="center"
            android:textColor="@color/white"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image05"  />

    </LinearLayout>

</LinearLayout>